fix: scroll gap

--- a/apps/csk-v-next/src/styles/globals.css
+++ b/apps/csk-v-next/src/styles/globals.css
@@ -2,18 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    scrollbar-gutter: stable;
+  }
+}
+
+
 @layer utilities {
-    .thin-scrollbar::-webkit-scrollbar {
-        width: 6px;
-        height: 6px;
-    }
+  .thin-scrollbar::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
 
-    .thin-scrollbar::-webkit-scrollbar-thumb {
-        background-color: rgba(100, 100, 100, 0.5);
-        border-radius: 10px;
-    }
+  .thin-scrollbar::-webkit-scrollbar-thumb {
+    background-color: rgba(100, 100, 100, 0.5);
+    border-radius: 10px;
+  }
 
-    .thin-scrollbar::-webkit-scrollbar-track {
-        background-color: transparent;
-    }
+  .thin-scrollbar::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
 }
